--- a/summaries/final report/Latex_version/Report.tex
+++ b/summaries/final report/Latex_version/Report.tex
@@ -95,7 +95,7 @@ Interestingly, a recent study of a set of trait-relevant and enhancer-associated
 Next, to examine whether elincRNAs are associated with the regulation of chromosomal architecture, I investigated their co-localization with loop anchors, where enhancer-promoter gene regulatory interactions are frequent \cite{Ji2016}. These regulatory regions are essential to establish chromosomal interactions within topologically associating domains (TADs). I compared the overlap of elincRNAs with these regions relative to what would be expected if these loci were randomly distributed across the intergenic regions of the genome (Methods). I found that elincRNAs are significantly enriched at LCL loop anchors (fold enrichment = 2.79, $q=1e-04$, Figure \ref{enrich_elinc}A).
 
 
-Architectural proteins, such as cohesin and CTCF, are also enriched at the loop anchors \cite{Rao2014}⁠. Specifically, the cohesin protein-complex is important for cell type-specific intra-TAD gene regulation \cite{Hadjur2009}⁠. Teh transcription factor CTCF is another central player in the regulation of chromatin architecture and gene expression. According to a recent model \cite{Ji2016}⁠, loops mediated by CTCF only or CTCF and cohesin collectively are important for the structural maintenance of TADs. These loops act as insulators, preventing interactions between TADs. In contrast, loops containing only cohesin binding sites are crucial in mediating regulatory intra-chromosomal interactions, supported by the evidence that cohesin depletion is associated with disrupted promoter-enhancer interactions within TADs \cite{Seitan2013}⁠.
+Architectural proteins, such as cohesin and CTCF, are also enriched at the loop anchors \cite{Rao2014}⁠. Specifically, the cohesin protein-complex is important for cell type-specific intra-TAD gene regulation \cite{Hadjur2009}⁠. The transcription factor CTCF is another central player in the regulation of chromatin architecture and gene expression. According to a recent model \cite{Ji2016}⁠, loops mediated by CTCF only or CTCF and cohesin collectively are important for the structural maintenance of TADs. These loops act as insulators, preventing interactions between TADs. In contrast, loops containing only cohesin binding sites are crucial in mediating regulatory intra-chromosomal interactions, supported by the evidence that cohesin depletion is associated with disrupted promoter-enhancer interactions within TADs \cite{Seitan2013}⁠.
 
 I found that elincRNA promoter regions are significantly enriched in CTCF and cohesin binding sites in LCL (binding of SMC3 and RAD21, 2 cohesin subunits, were used to identify cohesin binding, Methods) (fold enrichment = 5.2 and 8.1, respectively, $q=1e-04$) This enrichment is greater than the one found for other lincRNAs (fold enrichment = 1.3 and 1.3, respectively, $q<0.05$, Figure \ref{enrich_elinc}B).
 
@@ -160,7 +160,7 @@ Although my findings do not provide insights into the molecular mechanisms throu
 \begin{figure}[ht]
 	%\centering
 	\includegraphics[width=1\textwidth]{Figures/6_interactions.pdf}
-	\caption{Visual representations of the algorithm used to compute TAD boundaries in Hi-C matrices. \textbf{A.} Schematic representation of the algorithm used to measure insulation. A diamond (blue) of width w set to 100kb is slid on all position ($d$) along the diagonal, representing a step-size of 5kb in the genome, given by the matrix resolution. For each position $d$, the sum in the blue diamond ($V_d$) is computed and later used to define boundaries. The sum in the diamond at position $d$ (red vertical dotted line) represents a measure of all interactions across position $d$ (i.e. elements upstream of $d$ contacting those downstream of $d$) at a maximum range of w (blue curves at the top). In other words, the diamond measures contacts between regions [d-w;d] (upstream) and [d;d+w] (downstream) (blue), excluding interactions happening inside those regions (orange). \textbf{B.} Example of the calculated sums of interactions in vector $V$ through a TAD. $V_d$ represents the sum of interactions across position d (i.e. the sum in the diamond at position $d$, stored as the $d^{th}$ value of vector $V$), while $d$ are the positions along the matrix diagonal (corresponding to 5kb segments of the genome). Boundaries were extended inwards from TAD borders until $V_d$ reached an arbitrary threshold defined as the value of $V$ at the border, plus 10\% of the maximum value of $V$ inside the TAD. The solid vertical lines represent the TAD borders, the horizontal dashed lines represent the thresholds required to stop extending boundaries and the transparent areas represent the final boundaries. All blue elements relate to the left side, while all green elements relate to the right side.}
+	\caption{Visual representations of the algorithm used to compute TAD boundaries in Hi-C matrices. \textbf{A.} Schematic representation of the algorithm used to measure insulation. A diamond (blue) of width w set to 100kb is slid on all position ($d$) along the diagonal, representing a step-size of 5kb in the genome, given by the matrix resolution. For each position $d$, the sum of all pixels in the blue diamond ($V_d$) is computed and later used to define boundaries. The sum in the diamond at position $d$ (red vertical dotted line) represents a measure of all interactions across position $d$ (i.e. elements upstream of $d$ contacting those downstream of $d$) at a maximum range of w (blue curves at the top). In other words, the diamond measures contacts between regions [d-w;d] (upstream) and [d;d+w] (downstream) (blue), excluding interactions happening inside those regions (orange). \textbf{B.} Example of the calculated sums of interactions in vector $V$ through a TAD. $V_d$ represents the sum of interactions across position d (i.e. the sum in the diamond at position $d$, stored as the $d^{th}$ value of vector $V$), while $d$ are the positions along the matrix diagonal (corresponding to 5kb segments of the genome). Boundaries were extended inwards from TAD borders until $V_d$ reached an arbitrary threshold defined as the value of $V$ at the border, plus 10\% of the maximum value of $V$ inside the TAD. The solid vertical lines represent the TAD borders, the horizontal dashed lines represent the thresholds required to stop extending boundaries and the transparent areas represent the final boundaries. All blue elements relate to the left side, while all green elements relate to the right side.}
 	\label{interact_hic}
 \end{figure}
 
